fix(filtered): wrap

--- a/src/app/plant/components/filtered/filtered.component.scss
+++ b/src/app/plant/components/filtered/filtered.component.scss
@@ -1,4 +1,5 @@
 .card {
+  min-width: 6.25rem;
   max-width: 600px;
   border: none;
   background-color: #e8f3e2;
